--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8888
+spring.datasource.url = ${JDBC_DATABASE_URL}
+spring.datasource.username= ${JDBC_DATABASE_NAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
