--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=8888
 spring.datasource.url = ${JDBC_DATABASE_URL}
 spring.datasource.username= ${JDBC_DATABASE_NAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
