--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.url = ${JDBC_DATABASE_URL}
 spring.datasource.username= ${JDBC_DATABASE_NAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=Psortnik@gmail.com
+spring.mail.password=elahvxpztrzylyei
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
